syntax = "proto3";

package follow.v1;
option go_package="follow/v1;followv1";


message FollowRelation {
  int64 id = 1;
  int64 follower = 2;
  int64 followee = 3;
}

service FollowService {
  // 增删
  rpc Follow (FollowRequest) returns (FollowResponse);
  rpc CancelFollow(CancelFollowRequest) returns (CancelFollowResponse);

  // 改，例如说你准备支持备注、标签类的，那么就会有对应的修改功能

  // 获得某个人的关注列表
  rpc GetFollowee (GetFolloweeRequest) returns (GetFolloweeResponse);
  // 获得某个人关注另外一个人的详细信息
  rpc FollowInfo (FollowInfoRequest) returns (FollowInfoResponse);
}

message GetFolloweeRequest {
  // 关注者，也就是某人查看自己的关注列表
  int64 follower = 1;
  // min_id, max_id
  int64 offset = 2;
  int64 limit =3;
}

message GetFolloweeResponse {
  repeated FollowRelation follow_relations = 1;
}

message FollowInfoRequest {
  // 关注者
  int64 follower = 1;
  // 被关注者
  int64 followee = 2;
}

message FollowInfoResponse {
  FollowRelation follow_relation = 1;
}

message FollowRequest {
  // 被关注者
  int64 followee = 1;
  // 关注者
  int64 follower = 2;
  // 如果说你有额外的功能
  // 分组功能
//  int64 gid = 3;
  // 标签功能
//  repeated int64 label_ids = 4;
  // 比如说是否主动提醒 follower，followee 有了新动态
//  bool notification = 5;
}

message FollowResponse {
}

message CancelFollowRequest {
  // 这里是不是可以考虑传主键


  // 被关注者
  int64 followee = 1;
  // 关注者
  int64 follower = 2;
}

message CancelFollowResponse {
}


